Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-8144619
[packager] GetSystemJRE fails after changes for new version string
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P3
Fix Version/s:
9
Affects Version/s:
9
Component/s:
deploy
Labels:
pi_37
Subcomponent:
packager
Description
WindowsPlatform::GetSystemJRE doesn't work properly after the changes for new version string.
Attachments
Activity
People
Assignee:
Dmitry Cherepanov (Inactive)
Reporter:
Dmitry Cherepanov (Inactive)
Votes
:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
2015-12-03 11:12
Updated:
2015-12-08 06:48
Resolved:
2015-12-04 10:26