8144619: [packager] GetSystemJRE fails after changes for new version string

Reviewed-by: kcr, cbensen